--- a/example/core/pom.xml
+++ b/example/core/pom.xml
@@ -8,12 +8,19 @@
 		<version>1.0-SNAPSHOT</version>
 	</parent>
 	
-	<groupId>br.com.codevelopment.microservices</groupId>
 	<artifactId>core</artifactId>
 
 	<properties>
 		<java.version>11</java.version>
 	</properties>
+	
+	<dependencies>
+		<dependency>
+			<groupId>br.com.codevelopment.microservices</groupId>
+			<artifactId>common</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+	</dependencies>
 
 	<build>
 		<plugins>
