--- a/discover/pom.xml
+++ b/discover/pom.xml
@@ -8,22 +8,35 @@
 		<version>1.0-SNAPSHOT</version>
 	</parent>
 	
-	<artifactId>core</artifactId>
+	<artifactId>discovery</artifactId>
 
 	<properties>
 		<java.version>11</java.version>
+		<jaxb.version>2.4</jaxb.version>
+		<javax-activation.version>1.2.0</javax-activation.version>
 	</properties>
-	
+
 	<dependencies>
 		<dependency>
-			<groupId>br.com.codevelopment.microservices</groupId>
-			<artifactId>common</artifactId>
-			<version>${project.version}</version>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>javax.activation</groupId>
+			<artifactId>javax.activation-api</artifactId>
+		</dependency>
+		<dependency>
+		    <groupId>org.glassfish.jaxb</groupId>
+		    <artifactId>jaxb-runtime</artifactId>
 		</dependency>
 	</dependencies>
 
-		<build>
-		<finalName>core</finalName>
+	<build>
+		<finalName>discovery</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
