fix: ajuste no envio do token no module auth

--- a/example/pom.xml
+++ b/example/pom.xml
@@ -77,6 +77,11 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.nimbusds</groupId>
+			<artifactId>nimbus-jose-jwt</artifactId>
+			<version>8.19</version>
+		</dependency>
 	</dependencies>
 	<modules>
 		<module>core</module>
