--- a/example/gateway/src/main/resources/application.yml
+++ b/example/gateway/src/main/resources/application.yml
@@ -15,4 +15,16 @@ eureka:
     register-with-eureka: true
 zuul:
   sensitive-headers: Cookie
+hystrix:
+  command:
+    default:
+      execution:
+        isolation:
+          thread:
+            timeoutInMilliseconds: 60000
+ribbon:
+  ConnectTimeout: 3000
+  ReadTimeout: 60000
+ 
+
       
