feat: criação de um módulo dedicado para a geração do token para os microservicos

--- a/example/auth/pom.xml
+++ b/example/auth/pom.xml
@@ -26,6 +26,11 @@
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>br.com.codevelopment.microservices</groupId>
+			<artifactId>token</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
