feat: adição do authorization filter

--- a/example/gateway/pom.xml
+++ b/example/gateway/pom.xml
@@ -16,6 +16,11 @@
 	</properties>
 
 	<dependencies>
+	<dependency>
+		<groupId>br.com.codevelopment.microservices</groupId>
+		<artifactId>token</artifactId>
+		<version>${project.version}</version>
+	</dependency>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-zuul</artifactId>
