--- a/example/gateway/src/main/resources/application.yml
+++ b/example/gateway/src/main/resources/application.yml
@@ -15,6 +15,9 @@ eureka:
     register-with-eureka: true
 zuul:
   sensitive-headers: Cookie
+jwt:
+  config:
+    login-url: /auth/login
 hystrix:
   command:
     default:
