fix: utilizando token criptografado para evitar issue do zuul

--- a/example/core/pom.xml
+++ b/example/core/pom.xml
@@ -20,6 +20,11 @@
 			<artifactId>common</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>br.com.codevelopment.microservices</groupId>
+			<artifactId>token</artifactId>
+			<version>${project.version}</version>
+		</dependency>
 	</dependencies>
 
 	<build>
