--- a/example/auth/src/main/resources/application.yml
+++ b/example/auth/src/main/resources/application.yml
@@ -23,4 +23,7 @@ spring:
     url: jdbc:mysql://localhost:3306/codevelopment?allowPublicKeyRetrieval=true&sslMode=DISABLED
     username: root
     password: codevelopment
+#jwt:
+#  config:
+#    type: signed    
 
