--- a/example/core/src/main/resources/application.yml
+++ b/example/core/src/main/resources/application.yml
@@ -10,7 +10,7 @@ eureka:
     register-with-eureka: true  
 spring:
   application:
-    name: microservices
+    name: core
   jpa:
     show-sql: false 
     hibernate:
@@ -23,3 +23,6 @@ spring:
     url: jdbc:mysql://localhost:3306/codevelopment?allowPublicKeyRetrieval=true&sslMode=DISABLED
     username: root
     password: codevelopment
+#jwt:
+#  config:
+#    type: signed    
